--- a/Project.toml
+++ b/Project.toml
@@ -11,8 +11,10 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NamedColors = "51fcb6bd-ecd8-522c-95bc-4099d1d03463"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PotentialFlow = "73af2aaf-3f58-5b29-82a9-435ecf827f5b"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
