--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TransportBasedInference = "bdf749b0-1400-4207-80d3-e689c0e3f03d"
+UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
